<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="#ffffffff">

    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"              
              android:background="@drawable/gradient_redbox"
              android:textColor="#ffffffff"
              android:textSize="18sp"
              android:textStyle="bold"
              android:shadowColor="#ff666666"
              android:gravity="center"
              android:text="@string/app_name_standup_inprogress"/>

    <TextView android:id="@+id/members_label"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal"
              android:textSize="30dip"
              android:textColor="#ff000000"
              android:textStyle="bold"
              android:text="@string/members_label"/>

    <com.pyxis.androidAgilelyTimer.widget.TimeTextView
              android:id="@+id/remaining_time_textview"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal"
              android:textSize="60dip"
              android:textColor="#ff000000"
              android:text=""/>

    <Button android:id="@+id/end_member_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:background="@drawable/greenbutton"
            android:textColor="#ffffffff"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:text="@string/end_member_button"/>

    <TextView
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:gravity="center_horizontal"
               android:textSize="20dip"
               android:textStyle="bold"
               android:textColor="#ff000000"
               android:layout_marginTop="20dip"
               android:text="@string/total_time_remaining"/>

     <com.pyxis.androidAgilelyTimer.widget.TimeTextView
               android:id="@+id/total_remaining_time_textview"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:gravity="center_horizontal"
               android:textSize="40dip"
               android:textColor="#ff000000"
               android:text=""/>

     <Button android:id="@+id/end_meeting_button"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textSize="22sp"
             android:textStyle="bold"
             android:background="@drawable/redbutton"
             android:textColor="#ffffffff"
             android:layout_marginLeft="15dip"
             android:layout_marginRight="15dip"
             android:text="@string/end_meeting_button"/>

    />

    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:background="@drawable/grownbypyxis"
               android:layout_marginTop="63dip"/>
</LinearLayout>